<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/login_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:gravity="bottom"
    android:overScrollMode="never">
	<LinearLayout
		android:orientation="vertical" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<ImageView 
		     android:id="@+id/logo"
	         android:layout_width="240dp" 
	         android:layout_height="0dp" 
	         android:layout_weight="1"
	         android:src="@drawable/sp_logo" 
	         android:layout_gravity="center_horizontal" 
	         android:adjustViewBounds="true" 
	         android:layout_marginTop="15dp">
	    </ImageView>
	    <FrameLayout
	        android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
		    <LinearLayout 
		        android:id="@+id/login_form"
		        android:orientation="vertical" 
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content">
				<EditText 
					android:layout_width="fill_parent" 
					android:id="@+id/username_text" 
					android:layout_height="wrap_content"
					android:inputType="textNoSuggestions" 
					android:singleLine="true"
					android:hint="@string/username">
				</EditText>
				<EditText 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent" 
					android:id="@+id/password_text"
					android:inputType="textPassword"
					android:singleLine="true"
					android:hint="@string/password">
				</EditText>
				<CheckBox 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent" 
					android:text="@string/save_password" 
					android:id="@+id/password_save_checkbox">
				</CheckBox>
				<Button 
					android:layout_height="wrap_content" 
					android:layout_width="fill_parent" 
					android:id="@+id/login_button" 
					android:text="@string/login">
				</Button>
				<ImageView 
				    	android:id="@+id/rfid_icon"
				    	android:visibility="gone"
				    	android:layout_width="fill_parent" 
				    	android:layout_height="100dp" 
				    	android:src="@drawable/uniklucard_rfid" 
				    	android:layout_marginTop="15dp"
				    	>
		    	</ImageView>
		   	</LinearLayout>
			<LinearLayout
			    android:id="@+id/login_progress"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:orientation="vertical"
			    android:visibility="gone">
				<ProgressBar
					style="@style/GenericProgressIndicator.Small"/>
				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
			        android:text="@string/work_login"
			        android:paddingTop="@dimen/element_spacing_half"
			        android:textColor="@color/text_secondary"
			        android:textSize="@dimen/text_size_small" />
			</LinearLayout>
		</FrameLayout>
	</LinearLayout>
</ScrollView>
